# langraph-assignment

./: ..env.un~  ASSIGNMENT.md  GUIDE.md  README.md  TASKS.md  bonus_features.py  config.py  data_loader.py  main.py  pyproject.toml  run_bonus.py
agents/: graph.py  nodes.py  state.py  tools.py
data/: animal_conservation_report.md  species_data.json  test_report.md
test_chroma_db2/: chroma.sqlite3
tests/: test_bonus.py  test_nodes.py  test_workflow.py
