[project]
name = "langraph-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=1.0.7",
    "matplotlib>=3.10.8",
    "pandas>=2.0.0,<3.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.1",
    "torch>=2.0.0",
    "scipy>=1.10.0,<1.15.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.23.0,<0.35.0",  # Pin to stable version, avoid 0.36.0 bug
]
